--- a/hostname_change.yml
+++ b/hostname_change.yml
@@ -2,25 +2,20 @@
 
 
 - name: Configuring Logging on IOS devices
-  hosts: all
+  hosts: NXOS
   gather_facts: false
   connection: local
 
   vars:
     cli:
       username: cisco
-      password: cisco
-      authorize: yes 
-      auth_pass: cisco
-      timeout: 100
-
+      password: cisco 
+      timeout: 100 
+  
   tasks:
-    - name: Logging on IOS
-      ios_config:
-        provider: "{{ cli }}"
-        lines: hostname {{hostname.name}}
-
-      register: print_output
-
-    -  debug: var=print_output
-
+    - name: NXOS TIME BABY
+      nxos_command:
+        provider: "{{cli}}"
+        commands: 
+          - configure terminal
+          - hostname {{hostname.name}}
