MSDP LAB FINAL WORKING

--- a/bgp_config.yml
+++ b/bgp_config.yml
@@ -20,6 +20,7 @@
           - license grace-period 
           - feature bgp
           - feature ospf
+          - feature pim
           - hostname {{hostname}}
 
     - nxos_bgp_neighbor:
